--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMSAcZ5n0df77wFDZh4laFe",
+      "authorship_tag": "ABX9TyOAYPLC9EWjb3I7gNITuRqQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,23 +94,10 @@
         "from plots.chapter3 import *"
       ],
       "metadata": {
-        "id": "pgGfHWV5oZqU",
-        "outputId": "1536b7eb-91d9-496f-9fa6-1a6c5dad8a58",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "pgGfHWV5oZqU"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading files from GitHub repo to Colab...\n",
-            "Finished!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -218,7 +205,7 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "a176cf83-3945-4776-9e36-ed52101d53a1",
+        "outputId": "88cf15c0-0ec8-4adc-c1a0-af69529363f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
@@ -412,7 +399,7 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "0504b45e-5b96-4b9a-f87c-85e48b0a1545",
+        "outputId": "94f3f268-4152-46ec-bfc4-8d86472f8b65",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -438,7 +425,7 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "c0e4d3df-ff15-41d8-87bf-7f3e5d4455dc",
+        "outputId": "efa663c1-8bf6-4705-c8ee-d1bf5dc37e6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -503,7 +490,7 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "0fa0cbfb-d74a-4f35-f15a-0de1edf6421f",
+        "outputId": "38948eac-6469-4042-a4c8-09984fed81a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -538,7 +525,7 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "d413248d-bd00-4563-c7bb-45697f8451d0",
+        "outputId": "00cf0e71-bd5d-4246-df34-6887fb8289d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -644,7 +631,7 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "4a225498-1cb6-40d5-c3fe-7067506a5202",
+        "outputId": "9eacc2bf-10ab-4387-eeed-b2b9a3103c4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -690,7 +677,7 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "cbb51e39-4dd8-4e3c-a6ce-4c2d093fa778",
+        "outputId": "06f5160f-4320-4378-de6e-2c1cdd023e17",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -716,7 +703,7 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "46cee59f-75a2-45a7-e5b3-af4080750ed7",
+        "outputId": "596e47e5-f94c-41a8-a793-f28b49915703",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -775,7 +762,7 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "36339547-bca6-4a35-d378-5a2dc4c69217",
+        "outputId": "fc855b97-b07c-4881-9ce8-05ed71c08b72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -939,7 +926,7 @@
       ],
       "metadata": {
         "id": "KH8sBUKjZFuZ",
-        "outputId": "72a5f0e2-fb39-4fbb-80d7-5b26286a9e8d",
+        "outputId": "37217c57-a087-4482-f1fc-9577c91c6d71",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -989,7 +976,7 @@
       ],
       "metadata": {
         "id": "ywuj3tIPb78E",
-        "outputId": "d23bc170-bde6-48c8-dde9-bdaf8a9458bf",
+        "outputId": "e7ab6908-ca93-4143-f046-f66616cb8aad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1049,7 +1036,7 @@
       ],
       "metadata": {
         "id": "7KGimSc7i5mq",
-        "outputId": "1e58f6a8-b1c2-4753-bfc5-4de927bea0e9",
+        "outputId": "c601ed61-cc3b-4ce2-d38e-a9637ed53153",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1095,7 +1082,7 @@
       ],
       "metadata": {
         "id": "kqzsESKSjLye",
-        "outputId": "c62fe4fe-b519-4226-9866-bd41f05426de",
+        "outputId": "8f699ea0-e621-4628-f450-7b92daa4ec79",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1143,7 +1130,7 @@
       ],
       "metadata": {
         "id": "BLlWQOoUmB_c",
-        "outputId": "7a8e253b-25b7-4463-fa3d-f5d1a429bb01",
+        "outputId": "674519f1-6fe1-486e-dd78-05aba6f65955",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1183,7 +1170,7 @@
       ],
       "metadata": {
         "id": "jYFkQVuemgYv",
-        "outputId": "15ff377c-4967-47b9-d9e9-77a601718d00",
+        "outputId": "88a6ec69-2c38-45a9-b1d7-b523fb6d64af",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1216,7 +1203,7 @@
       ],
       "metadata": {
         "id": "4MeIh-J5m9cr",
-        "outputId": "96210e95-bb0f-4106-e9d4-25a2b3489c49",
+        "outputId": "cb40702e-ba51-4d01-94e2-bf962bbdbd9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1313,7 +1300,7 @@
       ],
       "metadata": {
         "id": "v55nZdz7sBja",
-        "outputId": "dbcf5d53-fe35-4940-9257-e16fedd2731e",
+        "outputId": "b1c89c7e-2a01-41e8-e384-f519a86d231c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1371,7 +1358,7 @@
       ],
       "metadata": {
         "id": "QbaYltajs1KL",
-        "outputId": "274069b2-8d7d-458a-f265-e42b2890efe0",
+        "outputId": "a2649341-ef36-4764-f1d0-20b49090354a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1435,7 +1422,7 @@
       ],
       "metadata": {
         "id": "ahWYmlyktqJt",
-        "outputId": "06a1a770-bdbe-4d5f-85b7-4daa02bb09a6",
+        "outputId": "e45751a4-c4b2-4dc8-a9f3-ffab9154d92a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1519,7 +1506,7 @@
       ],
       "metadata": {
         "id": "6mQoC-B7_ziz",
-        "outputId": "eff69e2e-3a1e-48cf-90f0-5ab19014b9cf",
+        "outputId": "1a937b4d-2cb1-472f-f3da-8066691e7205",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -1547,7 +1534,7 @@
       ],
       "metadata": {
         "id": "j8OYa5xf11co",
-        "outputId": "e2aa206c-aad9-40d1-cb21-be50c8b2b547",
+        "outputId": "674d48eb-1c2e-4b06-9720-cfc3735c2101",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1597,7 +1584,7 @@
       ],
       "metadata": {
         "id": "g5bWQuCLAVwZ",
-        "outputId": "efa106c7-5631-4281-d410-e7e28cfdd17f",
+        "outputId": "3dd796cb-d0a8-44cd-b152-08814a3de783",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1640,7 +1627,7 @@
       ],
       "metadata": {
         "id": "JBh62Ri6BcF7",
-        "outputId": "c824d19e-46c9-49b1-8d28-37aa3a3d6f86",
+        "outputId": "af122c82-a695-466f-fe20-2ae1a8595242",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1719,7 +1706,7 @@
       ],
       "metadata": {
         "id": "HI8ql8YuDfrs",
-        "outputId": "c099076b-5e4a-4dbd-8e6b-b75b3062654e",
+        "outputId": "532fb03b-9aea-4550-be48-4cbd9d076ff7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1807,7 +1794,7 @@
       ],
       "metadata": {
         "id": "mkVBWlp8kGmg",
-        "outputId": "f1d3e847-6a7e-434d-eab6-6e1de861344f",
+        "outputId": "1235f612-b2d3-4db5-8a75-372de3fe5b72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 257
@@ -1848,7 +1835,7 @@
       ],
       "metadata": {
         "id": "T_1peUgEmO35",
-        "outputId": "83052677-23fa-44b4-994a-da719126e8ec",
+        "outputId": "3da28f3a-f02a-4fef-b81f-5234e2f89b96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145
@@ -1904,7 +1891,7 @@
       ],
       "metadata": {
         "id": "rOCH0UJ-nfoN",
-        "outputId": "19c67b9c-2b80-4512-9239-1e287544d581",
+        "outputId": "884e8e06-b823-4b87-e513-f5c914112139",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -1945,7 +1932,7 @@
       ],
       "metadata": {
         "id": "oKc_UxIQoKQH",
-        "outputId": "b3acd563-4ff6-495e-fa41-15976ee4a1b0",
+        "outputId": "e238d3cc-f4f7-4c7c-ca4a-dad7f1cd31aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2075,7 +2062,7 @@
       ],
       "metadata": {
         "id": "UMYJCq6HA3iY",
-        "outputId": "67f005b8-2e43-46a6-c0b1-319378365ce1",
+        "outputId": "58f3a73f-c36a-4b2c-8a7d-471def22670a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2137,7 +2124,7 @@
       ],
       "metadata": {
         "id": "fgu0ddcqCUwX",
-        "outputId": "b1c0c23b-63d3-4d46-d506-62aa6c1eb338",
+        "outputId": "124a5145-4192-4ef6-937d-3e91053a5010",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2193,7 +2180,7 @@
       ],
       "metadata": {
         "id": "lvQO6cWWD5SJ",
-        "outputId": "2425342e-7693-4106-81d6-e6c291375578",
+        "outputId": "93992aae-602d-477b-949e-86181887d22e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2244,10 +2231,10 @@
       ],
       "metadata": {
         "id": "kEW8TL4GtWkY",
-        "outputId": "f44df1e2-90bb-4a1c-ac37-f33602e5f1c2",
+        "outputId": "a6d11a42-9449-446b-9017-1c723889e8a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 49,
@@ -2292,7 +2279,7 @@
       ],
       "metadata": {
         "id": "v3OmWZpArbbA",
-        "outputId": "fe83f592-1fe1-4cbd-aa64-cd9155c666e2",
+        "outputId": "91522955-837b-4b5a-e091-9b6836b7ef1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -2332,7 +2319,7 @@
       ],
       "metadata": {
         "id": "zVRgQlLLsTsa",
-        "outputId": "1f84a213-663f-4382-fc79-3b50d257b634",
+        "outputId": "a9183357-52aa-4eb0-cede-213fe67fbcc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2368,7 +2355,7 @@
       ],
       "metadata": {
         "id": "DoTUY0f6ssIS",
-        "outputId": "2ce6ec05-4052-434a-be16-d17240d34b8e",
+        "outputId": "557c2249-d106-4bc2-ccf0-37192f2da5d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -2431,7 +2418,7 @@
       ],
       "metadata": {
         "id": "aCDQADlMtxIq",
-        "outputId": "1dce34ab-91a9-4958-b9ba-73fdba3286c0",
+        "outputId": "ab66b5cc-4459-4cb3-e7d1-a6b10f4053a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -2471,7 +2458,7 @@
       ],
       "metadata": {
         "id": "7MLdfopZuQdf",
-        "outputId": "ec96f88e-2fe2-4919-a6b1-826d3ddd7d11",
+        "outputId": "82c7ee35-55d4-4a49-c207-6cec1a9fa032",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2507,7 +2494,7 @@
       ],
       "metadata": {
         "id": "D50gABRpubRi",
-        "outputId": "878a7b2f-dfd0-459e-ec2f-fe921a35f6b6",
+        "outputId": "7b82266a-5097-4b30-8445-521d3d5e1313",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -2574,10 +2561,10 @@
       ],
       "metadata": {
         "id": "FyoxENAR1aW7",
-        "outputId": "70dc21b9-3509-40fa-a6e7-a030f5afbfd1",
+        "outputId": "54129195-4417-4f9c-e10b-f7af17ca82a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 397
+          "height": 0
         }
       },
       "execution_count": 57,
@@ -2630,10 +2617,10 @@
       ],
       "metadata": {
         "id": "QOGxOLmF2au4",
-        "outputId": "c4204ff0-886c-4249-c7c0-b72eadd8c1fc",
+        "outputId": "a9363aa1-4b92-467d-d967-e6fe84a7824e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 59,
@@ -2669,10 +2656,10 @@
       ],
       "metadata": {
         "id": "7Z3SsezW3oeF",
-        "outputId": "3ca51ce1-1110-43bb-a781-1bccf2ba51e2",
+        "outputId": "f0762d5b-fb12-44ff-d281-8e19822345a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 433
+          "height": 0
         }
       },
       "execution_count": 60,
@@ -2746,10 +2733,10 @@
       ],
       "metadata": {
         "id": "s641J1Mde9gk",
-        "outputId": "8e2c623a-a678-48ae-9156-2936c77fc3ad",
+        "outputId": "d3fac9eb-e006-4d50-c71a-86de937b573e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 61,
@@ -2800,10 +2787,10 @@
       ],
       "metadata": {
         "id": "DpHgjHQog8Ft",
-        "outputId": "146f2e98-8d93-4278-c36e-bdb8c491cc2c",
+        "outputId": "c08e83fb-c03f-4279-9747-775f9a94ec70",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 64,
@@ -2847,7 +2834,7 @@
       ],
       "metadata": {
         "id": "WrdJk4SYhyWG",
-        "outputId": "ab89ed0c-2d1a-4ae6-8003-fd6dc7020f0d",
+        "outputId": "90064b39-5464-4380-c8eb-76c2c24ec185",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2887,7 +2874,7 @@
       ],
       "metadata": {
         "id": "KvQ01I7Yi3-O",
-        "outputId": "25a906fe-4a34-4bb8-e9e8-29a2f9df6b35",
+        "outputId": "6db9430a-33da-4aac-c2e8-feb9bf16e720",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2924,9 +2911,149 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Now, after training a model, we can use our class' predict method to get\n",
+        "predictions for our validation set and use Scikit-Learn’s metrics module to\n",
+        "compute a wide range of classification metrics, like the confusion matrix, for\n",
+        "example."
+      ],
       "metadata": {
         "id": "h7MUil5OjZF1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(13)\n",
+        "\n",
+        "# Builds tensors from numpy arrays\n",
+        "x_train_tensor = torch.as_tensor(x_train).float()\n",
+        "y_train_tensor = torch.as_tensor(y_train.reshape(-1, 1)).float()\n",
+        "\n",
+        "x_val_tensor = torch.as_tensor(x_val).float()\n",
+        "y_val_tensor = torch.as_tensor(y_val.reshape(-1, 1)).float()\n",
+        "\n",
+        "# Builds dataset containing ALL data points\n",
+        "train_dataset = TensorDataset(x_train_tensor, y_train_tensor)\n",
+        "val_dataset = TensorDataset(x_val_tensor, y_val_tensor)\n",
+        "\n",
+        "# Builds a loader of each set\n",
+        "train_loader = DataLoader(dataset=train_dataset, batch_size=16, shuffle=True)\n",
+        "val_loader = DataLoader(dataset=val_dataset, batch_size=16, shuffle=False)"
+      ],
+      "metadata": {
+        "id": "a2buRLcbtJcw"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# Sets learning rate\n",
+        "lr = 0.1\n",
+        "\n",
+        "model = nn.Sequential()\n",
+        "model.add_module(\"linear\", nn.Linear(2, 1))\n",
+        "\n",
+        "# Defines a SGD optimizer to update the parameters\n",
+        "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+        "\n",
+        "# Defines a BCE loss function\n",
+        "loss_fn = nn.BCEWithLogitsLoss()"
+      ],
+      "metadata": {
+        "id": "VJbobCCVuUmv"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_epochs = 100\n",
+        "\n",
+        "my_model = Trainer(model, loss_fn, optimizer)\n",
+        "my_model.set_loaders(train_loader, val_loader)\n",
+        "my_model.train(n_epochs)"
+      ],
+      "metadata": {
+        "id": "M2Hx-WrLu_mm"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.state_dict())"
+      ],
+      "metadata": {
+        "id": "nM66JqM8vrdN",
+        "outputId": "f308797f-a06e-4f20-81e6-46b7bd1c3264",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OrderedDict([('linear.weight', tensor([[ 1.2016, -1.9287]])), ('linear.bias', tensor([-0.0622]))])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's make prediction."
+      ],
+      "metadata": {
+        "id": "4QcfA8wev3YA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits_val = my_model.predict(x_val)\n",
+        "probabilities_val = sigmoid(logits_val).squeeze()\n",
+        "cm_thresh50 = confusion_matrix(y_val, probabilities_val >= 0.5)\n",
+        "cm_thresh50"
+      ],
+      "metadata": {
+        "id": "9jIKUKMhv5j0",
+        "outputId": "7cbbce38-2441-4a3e-d0c7-b7515702445a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 7,  2],\n",
+              "       [ 1, 10]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Wow! That’s a whole lot of material!"
+      ],
+      "metadata": {
+        "id": "YjNWhOna4mV8"
       }
     }
   ]
