--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZPCV3FznCOwaIAkYORFHX",
+      "authorship_tag": "ABX9TyNUkty8oVjLubA6nki60qeY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,10 +76,23 @@
         "from plots.chapter4 import *"
       ],
       "metadata": {
-        "id": "bRn0N4y8yesU"
+        "id": "bRn0N4y8yesU",
+        "outputId": "0cf57fe3-ccf5-4954-9d5d-0563669b04e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading files from GitHub repo to Colab...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,7 +135,7 @@
           "height": 17
         },
         "id": "DmgDM3-KyoUv",
-        "outputId": "d58292b1-7a44-4a53-840e-137fc6189e54"
+        "outputId": "f0d6673a-f332-4ec3-965e-32edb1781742"
       },
       "execution_count": 3,
       "outputs": [
@@ -195,7 +208,7 @@
           "height": 541
         },
         "id": "oWEazRLX1lul",
-        "outputId": "30e538a0-85a0-427b-b176-2e7eb8bedb3b"
+        "outputId": "8c973f76-307a-4ed7-92c4-76e75ea8d250"
       },
       "execution_count": 5,
       "outputs": [
@@ -276,7 +289,7 @@
           "height": 287
         },
         "id": "12KECyhm4B4B",
-        "outputId": "0ef89daa-bcd9-46ed-df48-462e181d1817"
+        "outputId": "8b081548-4e58-4a6e-be9f-e511d567953d"
       },
       "execution_count": 8,
       "outputs": [
@@ -316,7 +329,7 @@
           "height": 286
         },
         "id": "cj9CKqCW6kI3",
-        "outputId": "f5bbd460-1d01-4100-c5dd-f817224394f1"
+        "outputId": "2b444882-fe3e-4c9a-d3eb-109ee2859c8f"
       },
       "execution_count": 10,
       "outputs": [
@@ -361,7 +374,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JMY0-9YY7Rpk",
-        "outputId": "b67e7583-056b-411b-e35e-cbc05a616c3a"
+        "outputId": "3adc9ec4-5b63-4801-e51d-0c66b8cbe5e0"
       },
       "execution_count": 11,
       "outputs": [
@@ -389,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kX1EFQBU7YmD",
-        "outputId": "b19ab618-73f4-4e35-b671-c7c09d812843"
+        "outputId": "f02bd1dd-5e57-4976-b22e-c2abe043f6e9"
       },
       "execution_count": 12,
       "outputs": [
@@ -432,7 +445,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gqriNhWy8Aoz",
-        "outputId": "d39c6683-aa53-4851-bafb-22df6e27daf5"
+        "outputId": "ae5f3c78-e205-4734-c37f-c4940c58841f"
       },
       "execution_count": 13,
       "outputs": [
@@ -458,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vUTp6OyR8Mxw",
-        "outputId": "40980721-95de-42d1-ec4a-4b1e5a70d473"
+        "outputId": "e2e01f7e-6d8f-412c-ac54-838c189f2cae"
       },
       "execution_count": 14,
       "outputs": [
@@ -553,12 +566,12 @@
       ],
       "metadata": {
         "id": "fuhfN92n8QEK",
-        "outputId": "10aad6a9-b55a-450e-da89-8ffb755f5c67",
+        "outputId": "0edf4535-028d-4f40-f95e-659590b3e67b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +581,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 15
         }
       ]
     },
@@ -579,12 +592,12 @@
       ],
       "metadata": {
         "id": "LFTvZwXOCilw",
-        "outputId": "2d6d8fa1-704e-410e-90d7-7f0fd950f7fa",
+        "outputId": "56cb75c2-c4cc-44b6-a9aa-a0308cc5908b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +611,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 16
         }
       ]
     },
@@ -614,7 +627,7 @@
       ],
       "metadata": {
         "id": "x2kT4tjmCm6k",
-        "outputId": "95568d23-c94d-4f1a-d94c-455d7f377d92",
+        "outputId": "c5818399-e603-44be-e906-0fa8d56dac23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
@@ -676,13 +689,13 @@
       ],
       "metadata": {
         "id": "iCIdFL-YLcHh",
-        "outputId": "1eaeb333-296f-4957-a2a1-1b7d08f716b8",
+        "outputId": "4505d121-655d-49d8-b1a9-a06fe77a6788",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
         }
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -728,12 +741,12 @@
       ],
       "metadata": {
         "id": "V6V-hZzUJR0S",
-        "outputId": "427ecab5-9728-44a1-f6ba-4129af81ef25",
+        "outputId": "f38a3239-658c-4ff7-a12d-b01be77a8b8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +760,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 19
         }
       ]
     },
@@ -788,12 +801,12 @@
       ],
       "metadata": {
         "id": "z7bk2ZrOM6-Y",
-        "outputId": "0c8d64d0-7131-477c-ca4f-ebfdb8e91d77",
+        "outputId": "9f52894d-fd0d-473e-a146-32423f3e50ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +820,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 20
         }
       ]
     },
@@ -851,12 +864,12 @@
       ],
       "metadata": {
         "id": "egvC-crYOF4k",
-        "outputId": "8400b97c-b028-4cd0-c99f-abb99a72a570",
+        "outputId": "baee7bd5-1ff2-46d4-8794-d1208ffe377f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +879,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 21
         }
       ]
     },
@@ -879,12 +892,12 @@
       ],
       "metadata": {
         "id": "HGyk1qXSPcoM",
-        "outputId": "9ef2b2c9-e1c3-47e5-df5f-1547c4c97617",
+        "outputId": "4c9d4765-2d8f-4871-95c7-86fab91f1a2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,12 +937,12 @@
       ],
       "metadata": {
         "id": "CN72TS-cP1fr",
-        "outputId": "f856dfa9-be8e-4ec1-8b31-7a789df43759",
+        "outputId": "d57a8d2e-6f54-4cdb-cb38-779cca73e791",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +956,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 23
         }
       ]
     },
@@ -958,10 +971,97 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The first step of data preparation, is to convert our\n",
+        "features and labels from Numpy arrays to PyTorch tensors."
+      ],
       "metadata": {
         "id": "pvxl1D-jQFFS"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Builds tensors from numpy arrays BEFORE split\n",
+        "x_tensor = torch.as_tensor(images / 255).float()\n",
+        "y_tensor = torch.as_tensor(labels.reshape(-1, 1)).float()"
+      ],
+      "metadata": {
+        "id": "turfC5LDj6BM"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Dataset Transforms"
+      ],
+      "metadata": {
+        "id": "11yRN3sjkWpk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's build our own custom dataset that is capable of handling\n",
+        "transformations."
+      ],
+      "metadata": {
+        "id": "XHf7DctHkve9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TransformedDataset(Dataset):\n",
+        "  def __init__(self, x, y, transform=None):\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "    self.transform = transform\n",
+        "\n",
+        "  def __getitem__(self, index):\n",
+        "    x = self.x[index]\n",
+        "\n",
+        "    # transforms the features\n",
+        "    if self.transform:\n",
+        "      x = self.transform(x)\n",
+        "\n",
+        "    return x, self.y[index]\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.x)"
+      ],
+      "metadata": {
+        "id": "01PLMe9skMiQ"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So, let’s redefine our composed transformations and create our dataset."
+      ],
+      "metadata": {
+        "id": "SBw-ZOuXm5Rt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "composer = Compose([\n",
+        "    RandomHorizontalFlip(p=0.5),\n",
+        "    Normalize(mean=(.5,), std=(.5,))\n",
+        "])\n",
+        "\n",
+        "dataset = TransformedDataset(x_tensor, y_tensor, composer)"
+      ],
+      "metadata": {
+        "id": "rwB5Z-mwmknI"
+      },
+      "execution_count": 26,
+      "outputs": []
     }
   ]
 }
